funcitonal interface, assignment 2